--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
+    "start:dev": "npx webpack --watch --mode=development",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
